# vpnc

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
src/: cli.rs  dns.rs  main.rs  report.rs  status-1.rs  status.rs  vpn.rs
src/net/: public_ip.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/fixtures/linux/: ip_addr.txt  ip_link.txt  ip_route_split_tunnel.txt
tests/fixtures/macos/: ifconfig_no_vpn.txt  ifconfig_vpn_active.txt  netstat_rn_split_tunnel.txt  route_default_utun.txt  scutil_dns.txt  scutil_nc_connected.txt
